register fixed again

--- a/Projeto/src/main/webapp/www/pages/error/404.html
+++ b/Projeto/src/main/webapp/www/pages/error/404.html
@@ -2,7 +2,7 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="voluntier" content="noindex">
     <title>VolunTier</title>
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="/www/css/bootstrap.min.css" rel="stylesheet">
     <style>
       body, html {
         margin: 0;
@@ -45,9 +45,12 @@
           </script>
           <br>
           <h1>ಠ_ಠ Well, this is awkward...</h1>
-          <p><kbd>5XX Server Error</kbd></p>
-          <p>We are having some server issues, try again in a minute or so.</p>
+          <br>
+          <h1>Are you lost?</h1>
+          <p><kbd>404 Not found</kbd></p>
         </div>
       </div>
     </div>
+  
+
 </body></html>
