--- a/Projeto/src/main/webapp/Login.html
+++ b/Projeto/src/main/webapp/Login.html
@@ -58,7 +58,7 @@
 
             }
             else {
-                document.getElementById("WelcomeMsg").innerHsTML = "Login was unsuccessful";
+                document.getElementById("WelcomeMsg").innerHTML = "Login was unsuccessful";
                 $('body').css('cursor', 'default');
             }   
            
