--- a/Projeto/src/main/webapp/www/pages/confirm/confirm.html
+++ b/Projeto/src/main/webapp/www/pages/confirm/confirm.html
@@ -8,7 +8,7 @@
 <meta name="google-signin-client_id"
 	content="663592685939-lv6kh3ns2b9m8ap7sf6q5tl0g552ia94.apps.googleusercontent.com">
 	
-<title>Hello App Engine</title>
+<title>VolunTier</title>
 </head>
 <body>
 	<h1>CONFIRM.hmtl</h1>
