--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -118,6 +118,7 @@
    
     <!-- Hash function -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.min.js"></script>
+    <script src="/scripts/login.js"></script>
     <script src="/scripts/authenticate.js"></script>
     <script>
         window.onload = function () {
