Edit-profile page updates
Added some new features:
- Select country;
- Select profile privacy in a pretty manner;
- Debugging: Saving profile alterations
- Debugging: Map connection

--- a/Projeto/src/main/webapp/pages/contents/profile.html
+++ b/Projeto/src/main/webapp/pages/contents/profile.html
@@ -8,12 +8,16 @@
                     <div class="card-body"> 
                         <div class="d-flex flex-column align-items-center text-center"> 
                             <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150"> 
-                            <div class="mt-3"> 
-                                <h4 id="profile_username">Username</h4> 
-                                <p class="text-secondary mb-1 editable" id="profile_visibility">Public/Private</p> 
-                                <p class="text-muted font-size-sm editable" id="profile_region">Region</p> 
-                                <!-- <button class="btn btn-primary">Follow</button>                                 
-                                <button class="btn btn-outline-primary">Message</button> -->                                 
+                            <div class="mt-3">
+                                <h4 id="profile_username">Username</h4>
+                                
+                                <p class="text-secondary mb-1 container_lock" id="profile_visibility">Public</p>
+                                
+                                <div id="profile_region_div">
+                                    <p class="text-muted font-size-sm editable" id="profile_region">Country</p>
+                                </div>
+                                <!-- <button class="btn btn-primary">Follow</button>
+    <button class="btn btn-outline-primary">Message</button> -->
                             </div>                             
                         </div>                         
                     </div>                     
