Corrigido url dos pedidos rest

--- a/Projeto/src/main/webapp/pages/App.html
+++ b/Projeto/src/main/webapp/pages/App.html
@@ -118,7 +118,7 @@
                 
 
                 var urlvariable = "/rest/user";
-                var URL = "https://voluntier-312115.ew.r.appspot.com" + urlvariable;  //LookUp REST URL
+                var URL = "https://voluntier-317915.appspot.com" + urlvariable;  //LookUp REST URL
                 var xmlhttp = new XMLHttpRequest();
                 xmlhttp.open("POST", URL, false);
                 xmlhttp.setRequestHeader("Content-Type", "application/json");
@@ -286,7 +286,7 @@
 
             function saveInfo() {
                 var urlvariable = "/rest/user";
-                var URL = "https://voluntier-312115.ew.r.appspot.com" + urlvariable;  //LookUp REST URL
+                var URL = "https://voluntier-317915.appspot.com" + urlvariable;  //LookUp REST URL
                 var xmlhttp = new XMLHttpRequest();
                 xmlhttp.open("POST", URL, false);
                 xmlhttp.setRequestHeader("Content-Type", "application/json");
