--- a/Projeto/src/main/webapp/pages/contents/profile_region_list.html
+++ b/Projeto/src/main/webapp/pages/contents/profile_region_list.html
@@ -1,5 +1,5 @@
 <p class="text-muted font-size-sm" id="profile_region">
-                                    <input style="text-align:center; border-radius:5px; border-color:lightgray;" list="countries" name="country" placeholder="Country">
+                                    <input style="text-align:center; border-style:ridge; border-radius:5px; border-color:lightgray;" list="countries" name="country" placeholder="Country">
                                     <datalist id="countries">
                                         <option value="Afghanistan">Afghanistan</option>
                                         <option value="Albania">Albania</option>
