--- a/Projeto/src/main/webapp/pages/contents/profile.html
+++ b/Projeto/src/main/webapp/pages/contents/profile.html
@@ -11,10 +11,10 @@
                             <div class="mt-3">
                                 <h4 id="profile_username">Username</h4>
                                 
-                                <p class="text-secondary mb-1 container_lock" id="profile_visibility">Public</p>
+                                <p class="text-secondary mb-1 container_lock info" id="profile_visibility" name="profile">Public</p>
                                 
                                 <div id="profile_region_div">
-                                    <p class="text-muted font-size-sm editable" id="profile_region">Country</p>
+                                    <p class="text-muted font-size-sm editable info" id="profile_region" name="region">Country</p>
                                 </div>
                                 <!-- <button class="btn btn-primary">Follow</button>
     <button class="btn btn-outline-primary">Message</button> -->
@@ -30,13 +30,13 @@
                                     <line x1="2" y1="12" x2="22" y2="12"></line>
                                     <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
                                 </svg>Website</h6> 
-                            <span class="text-secondary editable" id="profile_website">None</span> 
+                            <span style="margin-left: 5%; min-width: 100px;" class="text-secondary editable info" id="profile_website" name="website" data-text="Your website link"></span> 
                         </li>                         
                         <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"> 
                             <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter mr-2 icon-inline text-info">
                                     <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path>
                                 </svg>Twitter</h6> 
-                            <span class="text-secondary editable" id="profile_twitter">None</span> 
+                            <span style="margin-left: 5%; min-width: 100px;" class="text-secondary editable info" id="profile_twitter" name="twitter" data-text="Your twitter link"></span> 
                         </li>                         
                         <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"> 
                             <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram mr-2 icon-inline text-danger">
@@ -44,13 +44,13 @@
                                     <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
                                     <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                                 </svg>Instagram</h6> 
-                            <span class="text-secondary editable" id="profile_instagram">None</span> 
+                            <span style="margin-left: 5%; min-width: 100px;" class="text-secondary editable info" id="profile_instagram" name="instagram" data-text="Your instagram link"></span> 
                         </li>                         
                         <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"> 
                             <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook mr-2 icon-inline text-primary">
                                     <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
                                 </svg>Facebook</h6> 
-                            <span class="text-secondary editable" id="profile_facebook">None</span> 
+                            <div style="margin-left: 5%; min-width: 100px;" class="text-secondary editable info" id="profile_facebook" name="facebook" data-text="Your facebook link"></div> 
                         </li>                         
                     </ul>                     
                 </div>                 
@@ -62,45 +62,35 @@
                             <div class="col-sm-3"> 
                                 <h6 class="mb-0">Full Name</h6> 
                             </div>                             
-                            <div class="col-sm-9 text-secondary editable" id="profile_fullname"> 
-                                None
-</div>                             
+                            <div class="col-sm-9 text-secondary editable info" id="profile_fullname" name="full_name"></div>                             
                         </div>                         
                         <hr> 
                         <div class="row"> 
                             <div class="col-sm-3"> 
                                 <h6 class="mb-0">Email</h6> 
                             </div>                             
-                            <div class="col-sm-9 text-secondary" id="profile_email"> 
-                                Email
-</div>                             
+                            <div class="col-sm-9 text-secondary" id="profile_email"></div>                             
                         </div>                         
                         <hr> 
                         <div class="row"> 
                             <div class="col-sm-3"> 
                                 <h6 class="mb-0">Landline</h6> 
                             </div>                             
-                            <div class="col-sm-9 text-secondary editable" id="profile_landline" label="landline"> 
-                                None
-</div>                             
+                            <div class="col-sm-9 text-secondary editable info" id="profile_landline" label="landline" data-text="+XXX YYYYYYYYY"></div>                             
                         </div>                         
                         <hr> 
                         <div class="row"> 
                             <div class="col-sm-3"> 
                                 <h6 class="mb-0">Mobile</h6> 
                             </div>                             
-                            <div class="col-sm-9 text-secondary editable" id="profile_mobile"> 
-                                None
-</div>                             
+                            <div class="col-sm-9 text-secondary editable info" id="profile_mobile" name="mobile" +XXX YYYYYYYYY></div>                             
                         </div>                         
                         <hr> 
                         <div class="row"> 
                             <div class="col-sm-3"> 
                                 <h6 class="mb-0">Address</h6> 
                             </div>                             
-                            <div class="col-sm-9 text-secondary editable" id="profile_address"> 
-                                None
-</div>                             
+                            <div class="col-sm-9 text-secondary editable info" id="profile_address" name="address"></div>                             
                         </div>                         
                         <hr> 
                         <div class="row"> 
