--- a/Projeto/src/main/webapp/pages/index.html
+++ b/Projeto/src/main/webapp/pages/index.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-    <head> 
-        <meta charset="utf-8"> 
-        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
-        <meta name="description" content=""> 
-        <meta name="author" content=""> 
-        <title>Pinegrow | Bootstrap Blocks Template</title>         
-        <!-- Bootstrap core CSS -->         
-        <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet"> 
-        <link rel="stylesheet" href="../css/blocks.css"> 
-        <!-- Custom styles for this template -->         
-        <link href="../css/style.css" rel="stylesheet"> 
-        <link rel="stylesheet" href="../css/blocks.css"> 
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap"> 
-    </head>     
-        
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <title>Pinegrow | Bootstrap Blocks Template</title>
+        <!-- Bootstrap core CSS -->
+        <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/blocks.css">
+        <!-- Custom styles for this template -->
+        <link href="../css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/blocks.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap">
+    </head>
+
     <body class="text-secondary">
         <nav class="bg-light navbar navbar-custo navbar-custom navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="/pages/index.html" style="font-family: 'Alfa Slab One', cursive; font-size: 26px; color: #e7822c; letter-spacing: 1px;">VolunTier</a>
@@ -26,49 +26,10 @@
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0" id="indexTab"></ul>
             </div>
         </nav>
-        <section id="Sign-section" class="background-cover bg-dark  pb-5 position-relative pt-5 text-white" style="background-image: url('https://wallpaperaccess.com/full/2580733.jpg'); height: 80vh;">
+        <section id="Sign-section" class="background-cover bg-dark  pb-5 position-relative pt-5 text-white" style="background-image: url('https://wallpaperaccess.com/full/2580733.jpg'); height: 83.5%;">
             <div class="container loginbox">
-                <div class="col-md-9 col-xl-8 ml-auto mr-auto" id="login-register-box">
-                    <form>
-                        <div class="form-group">
-                            <div class="flex-nowrap input-group">
-                                <div class="input-group-prepend">
-                                    <span class="bg-light input-group-text" id="addon-wrapping">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="1em" height="1em">
-                                        </svg>
-                                    </span>
-                                </div>
-                                <input type="text" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="addon-wrapping" id="email" required="" />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="flex-nowrap input-group">
-                                <div class="input-group-prepend">
-                                    <span class="bg-light input-group-text" id="addon-wrapping2">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="1em" height="1em">
-                                            <g>
-                                                <path fill="none" d="M0 0h24v24H0z"></path>
-                                                <path d="M10.758 11.828l7.849-7.849 1.414 1.414-1.414 1.415 2.474 2.474-1.414 1.415-2.475-2.475-1.414 1.414 2.121 2.121-1.414 1.415-2.121-2.122-2.192 2.192a5.002 5.002 0 0 1-7.708 6.294 5 5 0 0 1 6.294-7.708zm-.637 6.293A3 3 0 1 0 5.88 13.88a3 3 0 0 0 4.242 4.242z"></path>
-                                            </g>
-                                        </svg>
-                                    </span>
-                                </div>
-                                <input type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="addon-wrapping" id="password" required="" />
-                            </div>
-                        </div>
-                        <div class="form-group form-check">
-                            <!--How to do this? Remember to search-->
-                            <input type="checkbox" class="form-check-input" value="IsRememberMe" id="rememberMe" />
-                            <label class="form-check-label" for="rememberMe">Remember me</label>
-                            <p> <!--Make sure the check mark makes the password visible--> <input type="checkbox" class="form-check-input" id="exampleCheck1" onclick="showPassword()" /> <label class="form-check-label" for="exampleCheck1">Show Password</label> </p>
-                        </div>
-                        <button type="submit" id="loginButton" class="btn btn-block btn-primary font-weight-bold pb-2 pl-3 pr-3 pt-2" onclick="return SignIn()" disabled="disabled">Sign In</button>
-                        <!--Remember to do the forgot password form and password change page for the server to send-->
-                        <p style="text-align: center; margin-top: 10px;"><a href="/pages/forgotpwd.html" id="forgotpwdLink" data-target="forgotpw-box">Forgot password?</a></p>
-                        <p style="text-align: center; color: #4f859c;" id="result"></p>
-                    </form>
-                </div>
-                <p style="text-align: center; margin-top: 10px;"><a href="#" id="login-registerLink" data-target="register-box">Don't have an account? Register</a></p>
+                <div class="col-md-9 col-xl-8 ml-auto mr-auto" id="login-register-box"></div>
+                <p style="text-align: center; margin-top: 10px;"><a href="#" id="login-registerLink" data-target="register-box"></a></p>
             </div>
         </section>
         <section class="pb-5 pt-5 text-center" id="About-section">
@@ -102,26 +63,49 @@
         <script src="../bootstrap/js/bootstrap.min.js"></script>
         <!-- Hash function -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha512/0.8.0/sha512.min.js"></script>
-
+        <script src="../scripts/remember_me.js"></script>
         <script src="../scripts/login.js"></script>
         <script src="../scripts/authenticate.js"></script>
         <script src="../scripts/login_ok_fields.js"></script>
         <script src="../scripts/register_ok_fields.js"></script>
         <script src="../scripts/login.js"></script>
+        <script src="../scripts/logout.js"></script>
         <script src="../scripts/register.js"></script>
+
         <script src="../scripts/formLoader.js"></script>
-        <script src="../scripts/remember_me.js"></script>
+
         <script src="../scripts/csi.min.js"></script>
         <script>
             window.onload = function () {
                 if (tryAuthentication()) {
                     loadContent("indexTab", "../pages/contents/loggedTab.html");
+                    //$('#login-register-box').remove();
+                    //$('#login-registerLink').remove();
+                    document.getElementById("login-registerLink").parentElement.style.display="none";
+                    document.getElementById("login-register-box").style.display="none";
                 }
-                else
+                else {
                     loadContent("indexTab", "../pages/contents/logoutTab.html");
+                    jQuery.ajax({
+                        url: "contents/login-box.php",
+                        success: function (data) {
+                            $('#login-register-box').html(data);
+                        },
+                        async: false,
+                        complete: function() {
+                          initiateRememberMe();
+                        }
+                    });
+
+                    let data = "Don't have an account? Register"
+                    document.getElementById("login-registerLink").innerHTML = data;
+                    formLoader();
+
+                  }
 
             }
         </script>
+
         <script>
             function SignIn() {
                 isRememberMe();
@@ -129,5 +113,5 @@
             }
         </script>
 
-    </body>     
+    </body>
 </html>
