--- a/Projeto/src/main/webapp/pages/App.html
+++ b/Projeto/src/main/webapp/pages/App.html
@@ -70,13 +70,13 @@
         </div>
         <div id="EmptyTab1" class="tabcontent">
             <!--  <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>-->
-            <h3>EmptyTab1</h3>
-            <p>Nothing but void.</p>
+            <h3>Leaderboard</h3>
+            <p>The leaderboard is empty at the moment because our developer hasn't implemented it.</p>
         </div>
         <div id="EmptyTab2" class="tabcontent">
             <!--  <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>-->
-            <h3>EmptyTab2</h3>
-            <p>Nothing but void.</p>
+            <h3>Store</h3>
+            <p>There's nothing here to buy, because of, yet again, our developer. (Our higher-ups are really pissed about all the missed profit)</p>
         </div>
         <footer class="bg-dark pt-5 text-white-50">
             <div class="container">
