--- a/Projeto/src/main/webapp/pages/App.html
+++ b/Projeto/src/main/webapp/pages/App.html
@@ -68,12 +68,12 @@
             <!--  <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>-->
             <div data-include="./contents/profile.html"></div>
         </div>
-        <div id="EmptyTab1" class="tabcontent">
+        <div id="Leaderboard" class="tabcontent">
             <!--  <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>-->
             <h3>Leaderboard</h3>
             <p>The leaderboard is empty at the moment because our developer hasn't implemented it.</p>
         </div>
-        <div id="EmptyTab2" class="tabcontent">
+        <div id="Store" class="tabcontent">
             <!--  <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>-->
             <h3>Store</h3>
             <p>There's nothing here to buy, because of, yet again, our developer. (Our higher-ups are really pissed about all the missed profit)</p>
