--- a/Projeto/src/main/webapp/pages/App.html
+++ b/Projeto/src/main/webapp/pages/App.html
@@ -36,8 +36,8 @@
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'Map')" id="defaultOpen">Map</button>
             <button class="tablinks" onclick="openTab(event, 'Profile')">Profile</button>
-            <button class="tablinks" onclick="openTab(event, 'Leaderboard')">EmptyTab</button>
-            <button class="tablinks" onclick="openTab(event, 'Store')">EmptyTab</button>
+            <button class="tablinks" onclick="openTab(event, 'Leaderboard')">Leaderboard</button>
+            <button class="tablinks" onclick="openTab(event, 'Store')">Store</button>
         </div>
         <!-- Tab contents-->
         <div id="Map" class="tabcontent">
