Added Some stuff to debug
- Includes event page
- Includes load Events from server
- Other stuff

--- a/Projeto/src/main/webapp/pages/contents/eventSidePage.html
+++ b/Projeto/src/main/webapp/pages/contents/eventSidePage.html
@@ -7,6 +7,10 @@
             clickmarker.setMap(null);
             clickmarker = null;
         }
+        // Clear out the old searchbar markers.
+        searchMarkers.forEach((marker) => {
+            marker.setMap(null);
+        });
     }
 
     window.onload = removeMarkerListeners();
