--- a/Projeto/src/main/webapp/pages/contents/profile_region_list.html
+++ b/Projeto/src/main/webapp/pages/contents/profile_region_list.html
@@ -1,6 +1,6 @@
 <p class="text-muted font-size-sm" id="profile_region">
                                    <!---<input style="text-align:center; border-style:ridge; border-radius:5px; border-color:lightgray;" list="countries" name="country" placeholder="Country">-->
-                                    <select id="countries" style="text-align:center; border-style:ridge; border-radius:5px; border-color:lightgray;" list="countries" name="country" placeholder="Country">
+                                    <select id="countries" style="text-align:center; border-style:ridge; border-radius:5px; border-color:lightgray; max-width:200px" list="countries" name="country" placeholder="Country">
                                         <option value="Afghanistan">Afghanistan</option>
                                         <option value="Albania">Albania</option>
                                         <option value="Algeria">Algeria</option>
