--- a/Projeto/src/main/webapp/pages/App.html
+++ b/Projeto/src/main/webapp/pages/App.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>VolunTier</title>
-        <!-- Bootstrap core CSS -->
-        <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
-        <!--<script src="../scripts/csi.min.js"></script>-->
-        <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-        <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="../scripts/loadMap.js"></script>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alice&display=swap">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../css/blocks.css">
-        <link rel="stylesheet" href="../blocks.css">
-        <!-- Custom styles for this template -->
-        <link href="../css/style.css" rel="stylesheet">
-        <link rel="stylesheet" href="../css/lock.css">
-    </head>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>VolunTier</title>
+    <!-- Bootstrap core CSS -->
+    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!--<script src="../scripts/csi.min.js"></script>-->
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../scripts/loadMap.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alice&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/blocks.css">
+    <link rel="stylesheet" href="../blocks.css">
+    <!-- Custom styles for this template -->
+    <link href="../css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/lock.css">
+    <script src="../scripts/categories.js"></script>
+</head>
 
     <body class="text-secondary">
 
@@ -116,7 +117,7 @@
                                             <!--Should be Join when its public, and ask to join when its private-->
                                             <button style="margin:auto;position:" id="joinBtn" class="btn btn-primary">Join/Ask to join</button>
                                             <br>
-                                            <i style="margin-top:10px" class="fa fa-user-o" style=""></i><p style="display:inline-block; margin-left: 10px">0/10</p>
+                                            <i style="margin-top:10px" class="fa fa-user-o" style=""></i><p id="event_joined_capacity"style="display:inline-block; margin-left: 10px">0/10</p>
 
                                         </div>
                                     </div>
@@ -125,7 +126,7 @@
                             <div class="card mt-3">
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" style="text-align:center">
-                                      <b style="width:100%"><h6 class="mb-0" style="width:100%; font-size:110%">Creator: </h6></b>
+                                      <b style="width:100%"><h6 class="mb-0" style="width:100%; font-size:110%">Creator: </h6><a id="event_creator" href=""></a></b>
                                   </li>
                                     <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" style="text-align:center">
                                         <!--Map Preview Zone-->
@@ -133,7 +134,7 @@
                                         <section class="map-area " id="mapPreview" style="margin-top:10px"></section>
                                     </li>
                                     <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" style="text-align:center">
-                                        <h6 style="width:100%" class="mb-0">Start-Time - End-Time</h6>
+                                        <h6 id="event_start_end" style="width:100%" class="mb-0">Start-Time - End-Time</h6>
                                     </li>
                                     <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                         <h6 class="mb-0">
@@ -153,6 +154,7 @@
                                             <!-- Maybe the "Event Description" header should be centered-->
                                             <h6 class="mb-0" style="width:100%">Event Description</h6>
                                             <!--Description goes here-->
+                                            <p id="event_description"></p>
                                     </div>
                                     <hr>
                                     <div class="row" style="text-align:center">
@@ -219,6 +221,7 @@
         <!--  <script src="../scripts/register.js"></script>-->
         <!--  <script src="../scripts/login_ok_fields.js"></script>-->
         <!--  <script src="../scripts/register_ok_fields.js"></script>-->
+      
         <script src="../scripts/authenticate.js"></script>
         <script src="../scripts/logout.js"></script>
         <script src="../scripts/csi.min.js"></script>
